# prueba-tecnica-ds-ia

./: .gitignore  README.md  main.py  pyproject.toml
data/: knowledge_base.json
notebooks/: 01_top_products_analysis.ipynb  02_customer_pain_points.ipynb  03_customer_segmentation.ipynb  04_recommendation_engine.ipynb  06_knowledge_base_rag.ipynb  07_ai_agent_system_prompts.ipynb
